openshift/bni-app/bni-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bni-app-service # Nama service untuk aplikasi Anda
spec:
  selector:
    app: bni-app
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP # Atau NodePort/LoadBalancer jika ingin diekspos keluar klaster
